[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/enemy/walkingTowardsEnemy/walkingTowardsEnemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="walkingTowardsEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.486275, 0.396078, 0, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="positionNodes" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="positionNodes"]
position = Vector2( 0, 16 )

[node name="Position2D2" type="Position2D" parent="positionNodes"]
position = Vector2( 16, 16 )

[node name="Position2D3" type="Position2D" parent="positionNodes"]
position = Vector2( 16, 0 )

[node name="Position2D4" type="Position2D" parent="positionNodes"]
position = Vector2( 16, -16 )

[node name="Position2D5" type="Position2D" parent="positionNodes"]
position = Vector2( 0, -16 )

[node name="Position2D6" type="Position2D" parent="positionNodes"]
position = Vector2( -16, -16 )

[node name="Position2D7" type="Position2D" parent="positionNodes"]
position = Vector2( -16, 0 )

[node name="Position2D8" type="Position2D" parent="positionNodes"]
position = Vector2( -16, 16 )

[node name="rayNodes" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="rayNodes"]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="RayCast2D2" type="RayCast2D" parent="rayNodes"]
position = Vector2( 8, 8 )
enabled = true
cast_to = Vector2( 30, 30 )

[node name="RayCast2D3" type="RayCast2D" parent="rayNodes"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 30, 0 )

[node name="RayCast2D4" type="RayCast2D" parent="rayNodes"]
position = Vector2( 8, -8 )
enabled = true
cast_to = Vector2( 30, -30 )

[node name="RayCast2D5" type="RayCast2D" parent="rayNodes"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, -30 )

[node name="RayCast2D6" type="RayCast2D" parent="rayNodes"]
position = Vector2( -8, -8 )
enabled = true
cast_to = Vector2( -30, -30 )

[node name="RayCast2D7" type="RayCast2D" parent="rayNodes"]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( -30, 0 )

[node name="RayCast2D8" type="RayCast2D" parent="rayNodes"]
position = Vector2( -8, 8 )
enabled = true
cast_to = Vector2( -30, 30 )

[node name="randomTock" type="Timer" parent="."]
autostart = true

[node name="bodyChecker" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bodyChecker"]
shape = SubResource( 2 )
